--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.c working-tree-encoding=ibm-1047 git-encoding=iso8859-1
 *.gitignore working-tree-encoding=iso8859-1 git-encoding=iso8859-1
+*.md working-tree-encoding=ibm-1047 git-encoding=iso8859-1
 Makefile working-tree-encoding=ibm-1047 git-encoding=iso8859-1
