--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,7 @@
-*.c working-tree-encoding=ibm-1047 git-encoding=iso8859-1
-*.gitignore working-tree-encoding=iso8859-1 git-encoding=iso8859-1
-*.md working-tree-encoding=ibm-1047 git-encoding=iso8859-1
-Makefile working-tree-encoding=ibm-1047 git-encoding=iso8859-1
+# Default to EBCDIC unless otherwise specified
+*                working-tree-encoding=ibm-1047 git-encoding=iso8859-1
+
+# The git attributes and ignore files MUST be ASCII
+*.gitattributes  working-tree-encoding=iso8859-1 git-encoding=iso8859-1
+*.gitignore      working-tree-encoding=iso8859-1 git-encoding=iso8859-1
+
